Add ability to cache several files at once.